--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
         "psr-4": {
             "letsjump\\easyAjax\\": ""
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "letsjump\\easyAjax\\": ""
+        }
     }
 }
