--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+        "bower-asset/remarkable-bootstrap-notify": "3.1.3",
+        "bower-asset/animate-css": "3.7.0"
     },
     "autoload": {
         "psr-4": {
