--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "An easy way to do things with Ajax",
     "type": "yii2-extension",
     "license": "Apache-2.0",
+    "version": "v0.7.0",
     "authors": [
         {
             "name": "Gianpaolo Scrigna",
