--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "letsjump/yii2-easy-ajax",
-    "description": "An easy way to do things with Ajax",
+    "description": "",
     "type": "yii2-extension",
     "license": "MIT",
-    "version": "v0.7.0",
+    "version": "v1.0.0",
     "authors": [
         {
             "name": "Gianpaolo Scrigna",
@@ -15,6 +15,10 @@
         "yiisoft/yii2": "~2.0.0",
         "bower-asset/remarkable-bootstrap-notify": "3.1.3",
         "bower-asset/animate-css": "3.7.0"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
