--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,13 @@
         "yiisoft/yii2": "~2.0.0",
         "bower-asset/remarkable-bootstrap-notify": "3.1.3",
         "bower-asset/animate-css": "3.7.0"
-    }
-    ,
+    },
     "require-dev": {
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
-            "letsjump\\easyAjax\\": ""
+            "letsjump\\easyAjax\\": "src/"
         }
     }
 }
