--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "minimum-stability": "dev",
     "require": {
         "yiisoft/yii2": "~2.0.0",
-        "bower-asset/remarkable-bootstrap-notify": "3.1.3",
-        "bower-asset/animate-css": "3.7.0"
+        "bower-asset/remarkable-bootstrap-notify": "~3.1.0",
+        "bower-asset/animate-css": "~3.7.0"
     },
     "autoload": {
         "psr-4": {
