- Added reference to asset-packagist repo to composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,16 @@
     "name": "letsjump/yii2-easy-ajax",
     "description": "EasyAjax are a bunch of Yii methods that minimize the amount of code you need to write to interact with Ajax CRUD, notifies, modals, tabs, pjax-reloads, form validations among others...",
     "type": "yii2-extension",
-    "keywords": ["yii2", "user interface", "bootstrap", "notify", "modal", "ajax CRUD", "gii", "tabs"],
+    "keywords": [
+        "yii2",
+        "user interface",
+        "bootstrap",
+        "notify",
+        "modal",
+        "ajax CRUD",
+        "gii",
+        "tabs"
+    ],
     "readme": "README.md",
     "license": "MIT",
     "authors": [
@@ -17,6 +26,12 @@
         "bower-asset/remarkable-bootstrap-notify": "~3.1.0",
         "bower-asset/animate-css": "~3.7.0"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "letsjump\\easyAjax\\": "src/"
